--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -16,13 +16,25 @@
         </svg>
       </div>
 
-  </div>
-  <div class="project--cards"  (pan)="handlePan($event)" (panend)="handlePanEnd($event)" >
+  </div><!-- (pan)="handlePan($event)" (panend)="handlePanEnd($event)" -->
+  <div class="project--cards" >
       <div #bCard class="project--card" (transitionend)="handleShift()" *ngFor="let card of cards; let i = index"
           [ngStyle]="{ zIndex: cards.length - i }">
             <ion-card>
                 <ion-card-header >
-                    <img  class="project--imgs" *ngFor="let img of card.images; let o = index" #bCardImage [src]="img.img" (load)="bCardImage.style.opacity = 1" [ngStyle]="{ zIndex: card.images - o }">
+                    <swiper     
+                                [centeredSlides]="false"
+                                [autoplay]="{
+                                delay: 2500,
+                                disableOnInteraction: false
+                                }"
+                               
+                                
+                    >
+                        <ng-template swiperSlide *ngFor="let img of card.images; let o = index">
+                            <img   #bCardImage [src]="img.img">
+                        </ng-template>
+                    </swiper>  
                 </ion-card-header>
                 <ion-card-content>
                     <h3>{{ card.title }}</h3>
