--- a/src/app/components/cards/cards.component.scss
+++ b/src/app/components/cards/cards.component.scss
@@ -1,3 +1,9 @@
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
 .project {
     width: 100%;
     height: 100%;
@@ -90,7 +96,7 @@
     max-width: 100%;
     max-height: 75%;
     pointer-events: none;
-    opacity: 0;
+    opacity: 1;
     //transition: opacity 0.3s ease-in-out;
   }
   
